--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    background-color: rgba(228, 216, 216, 0.774);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
